cmake_minimum_required(VERSION 3.26)
project(LearnCPL2 C)

set(CMAKE_C_STANDARD 17)

add_executable( main main.c)
add_subdirectory(homework2)
add_subdirectory(Textbook)
add_subdirectory(3-if-for-array)
add_subdirectory(homework3)
add_subdirectory(4-Loops)
add_subdirectory(homework4)
add_subdirectory(homework5)
add_executable(lab lab.c
        lab.c)
add_subdirectory(5-function)
add_subdirectory(6-recursion)
add_subdirectory(homework6)
add_subdirectory(7-data-types)
add_subdirectory(homework7)
add_subdirectory(8-pointer-arrays)
add_subdirectory(homework8)
add_subdirectory(9-pointers-C-string)
add_subdirectory(homework9)
add_subdirectory(10-double-pointers)
add_subdirectory(homework10)
add_subdirectory(11-function-pointers)
add_subdirectory(12-struct)
add_subdirectory(13-linked-list)
add_subdirectory(homework11)
add_executable(review review.c)