add_executable(star star.c)
add_executable(primes primes.c
        primes.c)
add_executable(binary-search binary-search.c
        binary-search.c
        palindrome.c)
add_executable(digits-while digits-while.c
        digits-while.c)
add_executable(selection-sort selection-sort.c
        selection-sort.c)
add_executable(palindrome palindrome.c
        palindrome.c)