add_executable(game-of-life-func game-of-life-func.c)
add_executable(leapyear-func leapyear-func.c)
add_executable(primes-func primes-func.c
        primes-func.c)
add_executable(stars-func stars-func.c
        stars-func.c)
add_executable(binary-search-func binary-search-func.c
        binary-search-func.c)
