add_executable(factorial factorial.c)
add_executable(single single.c)
add_executable(inverse inverse.c
        inverse.c)
add_executable(standup standup.c
        standup.c)
add_executable(single_std single_std.c)
add_executable(statistics statistics.c)
add_executable(factorial_std factorial_std.c
        factorial_std.c)
add_executable(series series.c)
add_executable(series_std series_std.c
        series_std.c)
add_executable(collatz collatz.c
        collatz.c)

