add_executable(palindrome-1 palindrome-1.c)
add_executable(flip flip.c
        flip.c)
add_executable(b-ternary-1 b-ternary-1.c
        b-ternary-1.c
        palindrome-2.c
        quick-sort.c)
add_executable(josephus josephus.c
        josephus.c)
add_executable(renew renew.c
        renew.c)
add_executable(b-ternary-2 b-ternary-2.c
        b-ternary-2.c)
add_executable(bubble-sort bubble-sort.c
        bubble-sort.c)
add_executable(decimal decimal.c)
add_executable(palindrome-2
        palindrome-2.c)
add_executable(quick-sort
        quick-sort.c)