add_executable(matrix-mult matrix-mult.c
        matrix-mult.c)
add_executable(formation formation.c
        formation.c)
add_executable(sudoku sudoku.c
        sudoku.c)
add_executable(mines mines.c
        mines.c)
add_executable(trace trace.c)
add_executable(life life.c)
add_executable(obstacle obstacle.c)